--- a/pages/index.html
+++ b/pages/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="container pt-lg-7 pb-lg-10">
+    <div class="container-lg pt-lg-7 pb-lg-10">
       <ul class="nav justify-content-start border-bottom">
         <li class="nav-item">
           <a class="nav-link nav-item-hover" aria-current="page" href="#">最熱門</a>
@@ -47,7 +47,7 @@
         </li>
       </ul>
       <div class="position-relative">
-        <div class="row row-cols-lg-4 row-cols-1 my-md-10 my-7">
+        <div class="row row-cols-xl-4 row-cols-1 my-md-10 my-7">
           <div class="col mb-0">
             <div class="card border-0 shadows-card">
               <div class="position-relative mb-3">
@@ -454,8 +454,8 @@
     </main>
 
     <div class="rounded-pill bg-primary-100 py-lg-10 " style="max-width: 1656px;margin: 0 auto;">
-      <div class="container">
-        <div class="row d-flex align-items-center">
+      <div class="container-lg">
+        <div class="row d-lg-flex align-items-center d-block row-cols-xl-2 row-cols-1">
           <div class="col">
             <div class="row row-cols-2">
               <div class="col mb-2">
@@ -484,7 +484,7 @@
               </div>
             </div>
           </div>
-          <div class="col text-center">
+          <div class="col d-flex justify-content-center">
             <h4 class="fs-1 text-white"><span class="img-flower-title">想學什麼嗎？</span><br><span class="img-flower-title2">一探究竟。</span></h4>
           </div>
         </div>
