--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contact</title>
+    <title>about</title>
     <script type="module" crossorigin src="/202408week8/assets/main-7c95bfb4.js"></script>
     <link rel="stylesheet" href="/202408week8/assets/main-e7a04a06.css">
   </head>
@@ -244,7 +244,7 @@
     </div>
   </div>
 </header>
-    <h1>我是contact</h1>
+    <h1>我是about</h1>
     <footer class="footer bg-dark">
     <div class="container-lg">
         <div class="d-md-flex justify-content-between align-items-center">
