--- a/pages/index.html
+++ b/pages/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <title>index</title>
+    <title>程式課程</title>
   </head>
   <body>
     <%- include('./layout/header'); -%>
 
     <div class="banner-subject py-md-10 py-7 img-flower-left">
-      <div class="container img-flower-r">
+      <div class="container img-flower-right">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb mb-lg-7 mb-3">
             <li class="breadcrumb-item"><a href="#">所有課程</a></li>
