--- a/pages/shopping-cart.html
+++ b/pages/shopping-cart.html
@@ -7,9 +7,73 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>購物車</title>
   </head>
-  <body>
+  <body class="bg-gray-10">
     <%- include('./layout/header'); -%>
-    <h1>我是about</h1>
+    <div >
+      <div class="container py-lg-10 py-0">
+        <div class="d-flex justify-content-center">
+          <ul class="list-unstyled border-br d-flex justify-content-between" style="width: 428px;">
+            <li class="d-flex">
+              <div class="num-circle text-center">1</div>
+              <p class="bg-gray-10 ps-1 pe-3">確認訂單</p>
+            </li>
+            <li class="d-flex">
+              <div class="num-circle text-center">1</div>
+              <p class="bg-gray-10 ps-1 pe-3">確認訂單</p>
+            </li>
+            <li class="d-flex">
+              <div class="num-circle text-center">1</div>
+              <p class="bg-gray-10 ps-1 pe-3">確認訂單</p>
+            </li>
+          </ul>
+        </div>
+        <div class="row">
+          <div class="col-lg-8 bg-white rounded-2">
+            <ul class="list-group">
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                全選
+              </li>
+              <li class="list-group-item d-flex justify-content-between">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                <img src="/assets/images/cart-1.png" alt="cart" style="width: 200px;">
+                <h5>使用 HTML、CSS 開發一個網站</h5>
+                <p>NT$ 1,200</p>
+                <div>
+                  <a href="">移至收藏</a>
+                  <a href="">刪除</a>
+                </div>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                Third checkbox
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                Fourth checkbox
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                Fifth checkbox
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-4 bg-white rounded-2 d-flex flex-column">
+            <h4>訂單明細</h4>
+            <div class="d-flex justify-content-between">
+              <p>2 項課程小計</p>
+              <p>NT$ 3600</p>
+            </div>
+            <div class="d-flex justify-content-between">
+              <p>總計</p>
+              <p>NT$ 3,600</p>
+            </div>
+            <button class="btn btn-primary-100 w-100" type="submit">登入 / 註冊</button>
+            <p>確認購買即表示您已審閱 Learning 所提供之購物相關條款，並同意條款內容。</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
