--- a/pages/index.html
+++ b/pages/index.html
@@ -450,7 +450,7 @@
       </nav>
     </main>
 
-    <div class="rounded-3 bg-primary-100 py-lg-10 " style="max-width: 1656px;margin: 0 auto;">
+    <div class="rounded-3 bg-primary-100 py-lg-10 my-11" style="max-width: 1656px;margin: 0 auto;">
       <div class="container-lg">
         <div class="row d-flex align-items-center flex-column-reverse flex-xl-row row-cols-xl-2 row-cols-1">
           <div class="col">
