--- a/pages/shopping-cart.html
+++ b/pages/shopping-cart.html
@@ -38,12 +38,12 @@
                 <div class="d-flex py-6 justify-content-between border-bottom">
                   <input class="form-check-input me-4" type="checkbox" value="" aria-label="...">
                   <div class="d-flex justify-content-between  align-items-lg-center flex-column flex-lg-row w-100">
-                    <img src="/assets/images/cart-1.png" alt="cart" class="me-2" style="width: 200px;">
-                    <h5 class="me-2">使用 HTML、CSS 開發一個網站</h5>
-                    <p class="mx-2">NT$ 1,200</p>
-                    <div class="text-end">
+                    <img src="/assets/images/cart-1.png" alt="cart" class="me-2 mb-2 mb-lg-0" style="width: 200px;">
+                    <h5 class="me-2 mb-12 mb-lg-0">使用 HTML、CSS 開發一個網站</h5>
+                    <p class="mx-lg-2 mx-0 fw-semibold">NT$ 1,200</p>
+                    <div class="text-end d-lg-block d-flex ms-auto">
                       <a href="" class="d-block">移至收藏</a>
-                      <a href="" class="d-block">刪除</a>
+                      <a href="" class="d-block ms-7 ms-lg-0">刪除</a>
                     </div>
                   </div>
                 </div>
@@ -52,12 +52,12 @@
                 <div class="d-flex py-6 justify-content-between border-bottom">
                   <input class="form-check-input me-4" type="checkbox" value="" aria-label="...">
                   <div class="d-flex justify-content-between  align-items-lg-center flex-column flex-lg-row w-100">
-                    <img src="/assets/images/cart-2.png" alt="cart" class="me-2" style="width: 200px;">
-                    <h5 class="me-2">使用 HTML、CSS 開發一個網站</h5>
-                    <p class="mx-2">NT$ 1,200</p>
-                    <div class="text-end">
+                    <img src="/assets/images/cart-2.png" alt="cart" class="me-2 mb-2 mb-lg-0" style="width: 200px;">
+                    <h5 class="me-2 mb-12 mb-lg-0">一變應萬變：RWD 響應式網頁設計</h5>
+                    <p class="mx-lg-2 mx-0 fw-semibold">NT$ 1,200</p>
+                    <div class="text-end d-lg-block d-flex ms-auto">
                       <a href="" class="d-block">移至收藏</a>
-                      <a href="" class="d-block">刪除</a>
+                      <a href="" class="d-block ms-7 ms-lg-0">刪除</a>
                     </div>
                   </div>
                 </div>
@@ -66,12 +66,12 @@
                 <div class="d-flex py-6 justify-content-between border-bottom">
                   <input class="form-check-input me-4" type="checkbox" value="" aria-label="...">
                   <div class="d-flex justify-content-between  align-items-lg-center flex-column flex-lg-row w-100">
-                    <img src="/assets/images/cart-3.png" alt="cart" class="me-2" style="width: 200px;">
-                    <h5 class="me-2">使用 HTML、CSS 開發一個網站</h5>
-                    <p class="mx-2">NT$ 1,200</p>
-                    <div class="text-end">
+                    <img src="/assets/images/cart-3.png" alt="cart" class="me-2 mb-2 mb-lg-0" style="width: 200px;">
+                    <h5 class="me-2 mb-12 mb-lg-0">使用 jQuery 打造互動性網頁動畫效果</h5>
+                    <p class="mx-lg-2 mx-0 fw-semibold">NT$ 1,200</p>
+                    <div class="text-end d-lg-block d-flex ms-auto">
                       <a href="" class="d-block">移至收藏</a>
-                      <a href="" class="d-block">刪除</a>
+                      <a href="" class="d-block ms-7 ms-lg-0">刪除</a>
                     </div>
                   </div>
                 </div>
